--- a/app/views/templates/searchform.html
+++ b/app/views/templates/searchform.html
@@ -2,6 +2,6 @@
 <form class="search-form" ng-submit="searchOMDb()">
     <div class="inputs">
         <input class="form-control" ng-model="searchStr" type="text" name="" value="" placeholder="Search for a movie title &hellip;">
-        <input class="btn btn-info" type="submit" name="SearchBtn" value="Search">
+        <button class="btn btn-info" type="submit"><i class="fa fa-search"></i>Search</button>
     </div>
 </form>
